objects/CMN_ApexSharingSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>CMN_AccountPublicGroupFieldName__c</fullName>
        <label>Account Public Group Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ObjectRecordTypeName__c</fullName>
        <label>Object Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ShareRecordName__c</fullName>
        <label>Share Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apex Sharing Setting</label>
    <pluralLabel>Apex Sharing Settings</pluralLabel>
</CustomObject>